--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,5 +1,5 @@
 var toggle = "<%= raw @toggle %>"
-$("#<%= dom_ref('edit-item', @item) %>").html("<%= j render 'items/edit', invoice: @item.invoice, item: @item, titles: @titles, rows: @rows %>");
+$("#<%= dom_ref('edit', @item) %>").html("<%= j render 'items/edit', invoice: @item.invoice, item: @item, titles: @titles, rows: @rows %>");
 $("#description-toggle").html("<%= j render 'items/description', item: @item %>");
 $("#<%= dom_ref('tagline', @item) %>").html("<%= j render 'table_skus/abbrv_tagline', item: @item %>");
 
