added field_group controller and fixed/refactored item_product re conditional kinds and numbering

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
         <a href="<%= products_path %>" class="nav-link text-white">
           Products
         </a>
+        <a href="<%= field_groups_path %>" class="nav-link text-white">
+          FieldGroups
+        </a>
       </nav>
       <%= yield %>
     </div>
